generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  MEMBER
  MANAGER
}

enum ReportStatus {
  DRAFT
  SUBMITTED
}

model User {
  id             String          @id @default(uuid())
  name           String
  email          String          @unique
  passwordHash   String          @map("password_hash")
  role           Role            @default(MEMBER)
  createdAt      DateTime        @default(now()) @map("created_at")
  reports        Report[]
  projectMembers ProjectMember[]

  @@map("users")
}

model Project {
  id             String          @id @default(uuid())
  name           String          @unique
  description    String?
  createdAt      DateTime        @default(now()) @map("created_at")
  reports        Report[]
  projectMembers ProjectMember[]

  @@map("projects")
}

model Report {
  id             String       @id @default(uuid())
  userId         String       @map("user_id")
  projectId      String       @map("project_id")
  weekStart      DateTime     @map("week_start") @db.Date
  weekEnd        DateTime     @map("week_end") @db.Date
  tasksCompleted String       @map("tasks_completed")
  tasksPlanned   String       @map("tasks_planned")
  blockers       String?
  hoursWorked    Decimal?     @map("hours_worked") @db.Decimal(5, 1)
  notes          String?
  status         ReportStatus @default(DRAFT)
  submittedAt    DateTime?    @map("submitted_at")
  createdAt      DateTime     @default(now()) @map("created_at")
  updatedAt      DateTime     @updatedAt @map("updated_at")

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  project Project @relation(fields: [projectId], references: [id])

  @@unique([userId, weekStart])
  @@index([weekStart])
  @@index([projectId])
  @@map("reports")
}

model ProjectMember {
  id        String @id @default(uuid())
  userId    String @map("user_id")
  projectId String @map("project_id")

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@unique([userId, projectId])
  @@map("project_members")
}
