// Weekly Report Generator & Team Dashboard — ER diagram
// Paste this file into https://dbdiagram.io to render and share the diagram.
// This schema mirrors backend/prisma/schema.prisma — keep the two in sync.

Enum role {
  MEMBER
  MANAGER
}

Enum report_status {
  DRAFT
  SUBMITTED
}

Table users {
  id            uuid      [pk, default: `gen_random_uuid()`]
  name          varchar   [not null]
  email         varchar   [not null, unique]
  password_hash varchar   [not null]
  role          role      [not null, default: 'MEMBER']
  created_at    timestamp [not null, default: `now()`]

  Note: 'Role is a column, not a table: with exactly two static roles this is the simplest correct design. Extract a roles table only if roles become dynamic.'
}

Table projects {
  id          uuid      [pk, default: `gen_random_uuid()`]
  name        varchar   [not null, unique]
  description text      [null]
  created_at  timestamp [not null, default: `now()`]
}

Table reports {
  id              uuid          [pk, default: `gen_random_uuid()`]
  user_id         uuid          [not null, ref: > users.id]
  project_id      uuid          [not null, ref: > projects.id]
  week_start      date          [not null]
  week_end        date          [not null]
  tasks_completed text          [not null]
  tasks_planned   text          [not null]
  blockers        text          [null]
  hours_worked    decimal(5,1)  [null]
  notes           text          [null]
  status          report_status [not null, default: 'DRAFT']
  submitted_at    timestamp     [null]
  created_at      timestamp     [not null, default: `now()`]
  updated_at      timestamp     [not null]

  indexes {
    (user_id, week_start) [unique, note: 'One report per person per week, enforced by the database']
    week_start
    project_id
  }

  Note: 'Fixed report structure lives in the schema itself (real columns, not JSON), which enforces identical fields for every user. Submission tracking is derived: SUBMITTED = submitted, DRAFT/missing = pending, submitted_at past the deadline = late.'
}

// Optional: covers the "assign team members to projects" requirement.
Table project_members {
  id         uuid [pk, default: `gen_random_uuid()`]
  user_id    uuid [not null, ref: > users.id]
  project_id uuid [not null, ref: > projects.id]

  indexes {
    (user_id, project_id) [unique]
  }
}
